Added new pages for database views.

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -27,7 +27,12 @@
             {% if user.is_authenticated %}
                 <div style="padding-left: 50px;">
                     <p>You are logged in as {{ user.username }}.</p>
-                    <p><a href="{% url 'protected' %}">View Staff Management Page</a></p>
+                    <p><a href="{% url 'staff' %}">View Staff Management</a></p>
+                    <p><a href="{% url 'assignment_role' %}">View Staff Assignments</a></p>
+                    <p><a href="{% url 'ar_nospace' %}">View AR Nospace</a></p>
+                    <p><a href="{% url 'unassigned' %}">View Unassigned</a></p>
+
+                    <p><a href="{% url 'assignments' %}">View Assignments</a></p>
                     <p><a href="{% url 'admin:index' %}">Admin</a></p>
                     <p><a href="{% url 'logout' %}">Logout</a></p>
                 </div>
