--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -29,9 +29,9 @@
                     <p>You are logged in as {{ user.username }}.</p>
                     <p><a href="{% url 'staff' %}">View Staff Management</a></p>
                     <p><a href="{% url 'assignment_role' %}">View Staff Assignments</a></p>
-                    <p><a href="{% url 'ar_nospace' %}">View AR Nospace</a></p>
                     <p><a href="{% url 'unassigned' %}">View Unassigned</a></p>
 
+                    <p><a href="{% url 'roles' %}">View Roles</a></p>
                     <p><a href="{% url 'assignments' %}">View Assignments</a></p>
                     <p><a href="{% url 'admin:index' %}">Admin</a></p>
                     <p><a href="{% url 'logout' %}">Logout</a></p>
