--- a/core/templates/core/staff.html
+++ b/core/templates/core/staff.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Login | MHIWeb</title>
+        <title>Staff | MHIWeb</title>
           {% include "core/shared_head.html" %}
         <style>
             {% include "core/shared_style.html" %}
